--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "mongoose": "^4.9.4",
     "mustache": "^2.3.0",
     "nodemailer": "^4.0.1",
+    "stripe": "^4.18.0",
     "underscore": "^1.8.3"
   }
 }
